examples/test/testpolicy15835.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15835
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key9: value25
      key28: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value1
      podSelector:
        matchLabels:
          key38: value47
          key28: value42
          key25: value45
